src/test/resources/public/input/typechecking/fail/my_test_cases/my_fail47.jova
class Test{

}
class Main {

  public int main() {
     bool b1;
     bool b2 ;
     b1 = true;
     b2 = true + b1 - false;
     return 0;

    }
}

